--- a/src/input.css
+++ b/src/input.css
@@ -34,7 +34,7 @@
     @apply max-w-[12.5rem];
   }
   .header .header__navd {
-    @apply hidden md:block;
+    @apply hidden md:block ;
   }
 
   .header .header__navd ul {
@@ -77,7 +77,7 @@
     @apply md:flex;
   }
   .header .header__contactInfo ul li {
-    @apply gap-4;
+    @apply gap-1 md:gap-4;
   }
 
   .burger__menu {
@@ -102,20 +102,20 @@
   }
 
   /* banner */
-  .homeBanner__image {
-    @apply relative brightness-50 bg-homeBannerImage  h-[100vh] bg-no-repeat bg-cover;
+   .homeBanner__image {
+    @apply relative brightness-50 bg-homeBannerImage  md:h-[100vh] h-[80vh] bg-no-repeat bg-cover;
   }
   .homeBanner__wrapper {
     @apply text-center;
   }
   .homeBanner__text {
-    @apply absolute top-[15rem] text-light;
+    @apply absolute md:top-[20rem] top-[15rem] text-light;
   }
   .homeBanner__text h1 {
     @apply font-serif flex text-[clamp(39.36px,4vw,80px)] mb-[20px];
   }
   .homeBanner__text p {
-    @apply mb-[5rem] max-w-[50rem] m-auto text-base;
+    @apply mb-[5rem] max-w-[50rem] m-auto;
   }
 
   /* admission choice */
@@ -179,7 +179,7 @@
 
   /* scholarship */
   .scholarship__bgImage {
-    @apply bg-scholarshipImage w-[100vw] h-[145vh] bg-no-repeat bg-cover bg-fixed;
+    @apply bg-scholarshipImage md:w-[100vw] w-[97vw]  md:h-[129vh]  bg-no-repeat bg-cover bg-fixed;
   }
   /* Business Brandings */
   .businessBrandings {
@@ -189,7 +189,7 @@
     @apply flex flex-wrap gap-10  place-content-center items-center;
   }
   .businessBrandings__wrapper img {
-    @apply max-w-[200px] h-fit mx-[8rem];
+    @apply max-w-[200px] h-fit mx-[5rem];
   }
   /* footer */
   .footer__ctaInfo--links h4 {
@@ -201,16 +201,16 @@
 
   /* FAQ's */
   .faqNav__details h3 {
-    @apply font-semibold text-[24px] mb-[2rem];
+    @apply font-semibold text-[24px] mb-[2rem] text-black ;
   }
   .faqNav__info {
-    @apply bg-lightgray mb-[1rem] p-2 md:flex md:flex-row;
+    @apply bg-gray-100 mb-[1rem] p-2 md:flex md:flex-row;
   }
   .faqNav__info h4 {
-    @apply cursor-pointer font-semibold text-[clamp(16px,3vw,18px)] flex justify-between md:w-[65vw] mt-2 pl-2;
+    @apply cursor-pointer text-black font-semibold text-[clamp(16px,3vw,18px)] flex justify-between md:w-[65vw] mt-2 pl-2;
   }
   .faqNav__info p {
-    @apply max-h-[0rem] overflow-hidden transition-all mt-[2rem] hidden;
+    @apply max-h-[0rem] text-black overflow-hidden transition-all mt-[1.5rem] hidden;
   }
 
   .faqNav__info p.open {
